# gameboy-rust

./: .gitignore  LICENSE  README.md  notes.md  progress.md
debugger/: Cargo.toml
debugger/src/: main.rs
debugger/src/ui/: rendering.rs
emulator/: .gitignore  Cargo.toml  gb_config.json  gb_save.gbr
emulator/src/: config.rs  glium_sdl_main.rs  glow_sdl_main.rs  gui.rs  imgui_main.rs  lib.rs  main.rs  nice_main.rs  orig_main.rs  sdl_main.rs  snapshot.rs
emulator/src/gameboy/: bus.rs  cpu.rs  cpu.rs.old  flags_register.rs  gameboy.rs  instruction.rs  interrupt.rs  joypad.rs  memory.rs  mod.rs  ppu.rs  register.rs  timer.rs  timer.rs.old
emulator/src/gameboy/cartridge/: header.rs  mbc.rs  mbc0.rs  mbc1.rs  mbc1.rs.old  mbc3.rs  mod.rs
emulator/src/gameboy/ui/: mod.rs  mod.rs.old  rendering.rs
emulator/src/old_uis/: imgui_main.rs
frontend/: Cargo.toml  gb_save.gbr
frontend-egui/: Cargo.toml
frontend-egui/src/: gui.rs  main.rs
frontend-imgui/: Cargo.toml
frontend-imgui/src/: main.rs
frontend-imgui/src/ui/: mod.rs
frontend/src/: config.rs  gui.rs  lib.rs  main.rs  snapshot.rs
old_uis/: deps.txt
