[package]
name = "emulator"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
#sdl2 = "0.34.5"
#imgui = {version = "0.11.0", features = ["tables-api"]}
#copypasta = "0.8"
#glium = { version = "0.32.1", default-features = true }
#image = "0.23"
#imgui-glium-renderer = "0.11.0"
#imgui-glow-renderer = "0.11.0"
#imgui-winit-support = "0.11.0"
# imgui-sdl2-support = "0.11.0"
#glow = "0.12.0"
hex = "0.4.3"
# ...
egui = "0.23"
egui-wgpu = "0.23"
egui-winit = { version = "0.23", default-features = false, features = ["links"] }
env_logger = "0.10"
error-iter = "0.4"
log = "0.4"
winit = "0.28"
winit_input_helper = "0.14"
pixels = { git = "https://github.com/parasyte/pixels", branch = "main" }