[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
emulator = { path = "../emulator" }
egui = "0.23"
egui-wgpu = "0.23"
egui-winit = { version = "0.23", default-features = false, features = ["links"] }
env_logger = "0.10"
error-iter = "0.4"
log = "0.4"
winit = {version="0.28", features = ["serde"] }
winit_input_helper = "0.14"
pixels = { git = "https://github.com/parasyte/pixels", branch = "main" }
rfd = "0.14.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-big-array = "0.5.1"
typetag = "0.2.16"
chrono = "0.4.38"
bincode = "1.3.3"
scan_dir = "0.3.3"
